--- a/News_Classification_Model/My_Model.ipynb
+++ b/News_Classification_Model/My_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "id": "664dd786-7445-4230-9377-16c1970ea9cd",
    "metadata": {
     "tags": []
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "id": "d6e8bbeb-4bb0-4b61-be9e-075be97dd189",
    "metadata": {
     "tags": []
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "id": "31ee8c60-7742-4c92-b87c-51547d86489c",
    "metadata": {
     "tags": []
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "id": "7b10f4e9-dd3a-4f8d-8fd3-52773e274fec",
    "metadata": {
     "tags": []
@@ -140,7 +140,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1219 rows × 2 columns</p>\n",
+       "<p>1793 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -157,22 +157,22 @@
        "120  \\n﻿वीरगञ्ज, ५ असोज । आत्मा ज्ञान प्रचार संघ वी...        world\n",
        "121  \\n﻿सिरहा, ३० कार्तिक । सिरहाको कर्जन्हाका क्या...        world\n",
        "\n",
-       "[1219 rows x 2 columns]"
+       "[1793 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "combined_csv = pd.concat([pd.read_csv(root+f) for f in all_filenames])\n",
-    "combined_csv"
+    "combined_csv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "id": "b349647f-6573-4425-9431-5ee3dd1eb43a",
    "metadata": {
     "tags": []
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "id": "40a5710a-2ce3-4400-9ced-c6556cccd514",
    "metadata": {
     "tags": []
@@ -475,7 +475,7 @@
        " 'होस्']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "id": "317fa32d-cdb1-41fe-b706-2b2b7181edaf",
    "metadata": {
     "tags": []
@@ -503,7 +503,7 @@
        "[':', '?', '|', '!', '.', ',', '\" \"', \"''\", '( )', '—', '-', \"?'\", '\\\\n']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "id": "d7c377f2-8c02-4d3d-9894-b9ac7054ebd6",
    "metadata": {
     "tags": []
@@ -567,24 +567,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "id": "f322920f-197f-4d31-aa53-b23261c75bf0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>category</th>\n",
+       "      <th>Title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>﻿काठमाडौंमा पहिलो पटक स्ट्रबेरीको व्यवसायिक खे...</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>अफ्गानिस्थान निर्वाचन अधिकारीहरुले गत महिना रा...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>जिल्लाका किसानले लगाएको अदुवामा गानो कुहिने, ग...</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>﻿श्रावण काठमाण्डौं अमेरिकी राष्ट्रपति बाराक ओब...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>काभ्रेपलाञ्चोकमा कृषकले एसआरआई प्रविधिमा गरेको...</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>﻿एक वैज्ञानिकको भनाइ अनुसार, मानिसले शासन वर्ष...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>राजधानीमा यतिबेला तरकारीको मूल्य आकासिएको छ। क...</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>﻿अमेरिकाको संघीय अनुसन्धान ब्युरो एफबीआइले करि...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>पाल पोल्ट्री तथा लाइभस्टक क्षेत्रको समग्र विका...</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>﻿मानव अधिकारसम्बन्धी युरोपेली न्यायालयले फ्रान...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>\\n﻿बिहार । मुकेश पाठक सहित आधा दर्जन कुख्यात अ...</td>\n",
+       "      <td>world</td>\n",
+       "      <td>﻿बिहार मुकेश पाठक सहित आधा दर्जन कुख्यात अपराध...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>\\n﻿राजविराज, २६ साउन । सप्तरी जिल्लामा पहिलो प...</td>\n",
+       "      <td>world</td>\n",
+       "      <td>﻿राजविराज, साउन सप्तरी जिल्लामा आयोजना लागेको ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>\\n﻿वीरगञ्ज, ५ असोज । वीरगञ्जमा भव्यताका साथ वि...</td>\n",
+       "      <td>world</td>\n",
+       "      <td>﻿वीरगञ्ज, असोज वीरगञ्जमा भव्यताका विश्व शान्ति...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>\\n﻿वीरगञ्ज, ५ असोज । आत्मा ज्ञान प्रचार संघ वी...</td>\n",
+       "      <td>world</td>\n",
+       "      <td>﻿वीरगञ्ज, असोज आत्मा ज्ञान प्रचार संघ वीरगञ्जल...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>\\n﻿सिरहा, ३० कार्तिक । सिरहाको कर्जन्हाका क्या...</td>\n",
+       "      <td>world</td>\n",
+       "      <td>﻿सिरहा, कार्तिक सिरहाको कर्जन्हाका क्यान्सर वि...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1793 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  text     category  \\\n",
+       "0    ﻿काठमाडौंमा पहिलो पटक स्ट्रबेरीको व्यवसायिक खे...  Agriculture   \n",
+       "1    जिल्लाका किसानले लगाएको अदुवामा गानो कुहिने, ग...  Agriculture   \n",
+       "2    काभ्रेपलाञ्चोकमा कृषकले एसआरआई प्रविधिमा गरेको...  Agriculture   \n",
+       "3    राजधानीमा यतिबेला तरकारीको मूल्य आकासिएको छ। क...  Agriculture   \n",
+       "4    पाल पोल्ट्री तथा लाइभस्टक क्षेत्रको समग्र विका...  Agriculture   \n",
+       "..                                                 ...          ...   \n",
+       "117  \\n﻿बिहार । मुकेश पाठक सहित आधा दर्जन कुख्यात अ...        world   \n",
+       "118  \\n﻿राजविराज, २६ साउन । सप्तरी जिल्लामा पहिलो प...        world   \n",
+       "119  \\n﻿वीरगञ्ज, ५ असोज । वीरगञ्जमा भव्यताका साथ वि...        world   \n",
+       "120  \\n﻿वीरगञ्ज, ५ असोज । आत्मा ज्ञान प्रचार संघ वी...        world   \n",
+       "121  \\n﻿सिरहा, ३० कार्तिक । सिरहाको कर्जन्हाका क्या...        world   \n",
+       "\n",
+       "                                                 Title  \n",
+       "0    अफ्गानिस्थान निर्वाचन अधिकारीहरुले गत महिना रा...  \n",
+       "1    ﻿श्रावण काठमाण्डौं अमेरिकी राष्ट्रपति बाराक ओब...  \n",
+       "2    ﻿एक वैज्ञानिकको भनाइ अनुसार, मानिसले शासन वर्ष...  \n",
+       "3    ﻿अमेरिकाको संघीय अनुसन्धान ब्युरो एफबीआइले करि...  \n",
+       "4    ﻿मानव अधिकारसम्बन्धी युरोपेली न्यायालयले फ्रान...  \n",
+       "..                                                 ...  \n",
+       "117  ﻿बिहार मुकेश पाठक सहित आधा दर्जन कुख्यात अपराध...  \n",
+       "118  ﻿राजविराज, साउन सप्तरी जिल्लामा आयोजना लागेको ...  \n",
+       "119  ﻿वीरगञ्ज, असोज वीरगञ्जमा भव्यताका विश्व शान्ति...  \n",
+       "120  ﻿वीरगञ्ज, असोज आत्मा ज्ञान प्रचार संघ वीरगञ्जल...  \n",
+       "121  ﻿सिरहा, कार्तिक सिरहाको कर्जन्हाका क्यान्सर वि...  \n",
+       "\n",
+       "[1793 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ndf = df.copy()\n",
     "cat_title = []\n",
     "for i, row in ndf.iterrows():\n",
     "  ndf.loc[i, \"Title\"]= preprocess_text([row.text], stop_words, punctuation_words)[0]\n",
     "\n",
-    "#ndf"
+    "ndf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "id": "c381c59d-a708-483d-b570-4b30c2481dea",
    "metadata": {
     "tags": []
@@ -599,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "id": "37fc6901-3522-4e50-be4d-c44cb6c8196e",
    "metadata": {
     "tags": []
@@ -625,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "id": "f782b788-529d-4d7c-a8d1-c1c224f30106",
    "metadata": {
     "tags": []
@@ -634,10 +767,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9989059080962801"
+       "1.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "id": "13b440a4-5a80-4d5f-b57f-88aca1a3ba99",
    "metadata": {
     "tags": []
@@ -660,7 +793,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 74.09836065573771 %\n"
+      "Accuracy: 83.51893095768374 %\n"
      ]
     }
    ],
@@ -671,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 75,
    "id": "de9d7947-5283-43d4-81a9-b104b0704b4b",
    "metadata": {
     "tags": []
@@ -696,7 +829,7 @@
        "  'world': 12})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "id": "54c767c7-1c6f-41b5-ba4d-0283effb4482",
    "metadata": {
     "tags": []
@@ -719,7 +852,7 @@
        "['bank']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,6 +883,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8d5737b2-07ef-4d49-aba4-2e238a2dfa29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f4446cf-5ffd-48d6-ac70-b196f72b3929",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93256191-6f37-4865-93fe-29160b404fb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01752a63-974a-4be0-8dd1-182c4b0beeeb",
    "metadata": {},
    "outputs": [],
    "source": []
