Model and UI updated

--- a/News_Classification_Model/test-csv02.ipynb
+++ b/News_Classification_Model/test-csv02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "id": "8595d870-29dc-4d6e-94fd-f2bc81efcf83",
    "metadata": {
     "tags": []
@@ -15,31 +15,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 46,
    "id": "2f2874eb-a5cb-4d29-be4f-25eba522ae1a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "txt_directory = 'D:\\\\Final year project\\\\References\\\\Data Sets\\\\Nepali News Data Set\\\\nepali_news_dataset_20_categories_large\\\\Politics'"
+    "txt_directory = 'D:\\\\Final year project\\\\References\\\\Data Sets\\\\tourism1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 47,
    "id": "7465c2b9-7bae-4859-bcd1-a1eb1aac7734",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "csv_file = 'D:\\\\Final year project\\\\References\\\\Politics.csv'"
+    "csv_file = 'D:\\\\Final year project\\\\References\\\\tourism1.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "id": "c4c49af0-d520-4572-a0fc-e06c61f74e83",
    "metadata": {
     "tags": []
@@ -52,7 +52,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[76], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(txt_directory, filename)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m txt_file:\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;66;03m# Read the contents of the file\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m     text \u001b[38;5;241m=\u001b[39m \u001b[43mtxt_file\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m     16\u001b[0m       \u001b[38;5;66;03m# Determine the category based on the filename\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory1\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mlower():\n",
+      "Cell \u001b[1;32mIn[48], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(txt_directory, filename)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m txt_file:\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;66;03m# Read the contents of the file\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m     text \u001b[38;5;241m=\u001b[39m txt_file\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m     16\u001b[0m       \u001b[38;5;66;03m# Determine the category based on the filename\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory1\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mlower():\n",
       "File \u001b[1;32m<frozen codecs>:322\u001b[0m, in \u001b[0;36mdecode\u001b[1;34m(self, input, final)\u001b[0m\n",
       "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xff in position 0: invalid start byte"
      ]
@@ -129,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
