stemmer added on model

--- a/News_Classification_Model/My_Model - Copy.ipynb
+++ b/News_Classification_Model/My_Model - Copy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 25,
    "id": "664dd786-7445-4230-9377-16c1970ea9cd",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 26,
    "id": "d6e8bbeb-4bb0-4b61-be9e-075be97dd189",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 27,
    "id": "31ee8c60-7742-4c92-b87c-51547d86489c",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 28,
    "id": "7b10f4e9-dd3a-4f8d-8fd3-52773e274fec",
    "metadata": {
     "tags": []
@@ -200,7 +200,7 @@
        "[2134 rows x 2 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 29,
    "id": "b349647f-6573-4425-9431-5ee3dd1eb43a",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 30,
    "id": "a5acb3cb-e5a7-44a7-b7e2-15c9a4e1a1b9",
    "metadata": {
     "tags": []
@@ -353,7 +353,7 @@
        "world           122"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 31,
    "id": "e0b8e2ce-6901-42e2-8ff2-2026c6a2178f",
    "metadata": {
     "tags": []
@@ -386,7 +386,7 @@
        "<Axes: xlabel='category'>"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 90,
    "id": "2c021b54-6c35-44fa-9e4c-299d02b170b7",
    "metadata": {
     "tags": []
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 91,
    "id": "317fa32d-cdb1-41fe-b706-2b2b7181edaf",
    "metadata": {
     "tags": []
@@ -454,7 +454,7 @@
        "[':', '?', '|', '!', '.', ',', '\" \"', \"''\", '( )', '—', '-', \"?'\", '\\\\n']"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 92,
+   "id": "b891c29e-b140-4229-ada1-f4f9cbcd9cc5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# import nltk\n",
+    "# nltk.download('stopwords')\n",
+    "# nltk.download('snowball_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "7a0c5e5e-8d8e-44a0-bc1c-cc5fc80380c4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# from nltk.stem.snowball import SnowballStemmer\n",
+    "# stemmer = SnowballStemmer(\"nepali\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63bab63e-aa68-43b9-8cb9-a316ccefddd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6ad21d-00a4-43d4-947d-83f62ef6dda5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "d7c377f2-8c02-4d3d-9894-b9ac7054ebd6",
    "metadata": {
     "tags": []
@@ -494,53 +537,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['सगरमाथा चुचुरोमा पुग्ने शेर्पा टोलीको नेतृत्व']\n"
+      "['सगरमाथा चुचुरो पुग्ने, शेर्पा टोली नेतृत्व लेख्']\n"
      ]
     }
    ],
    "source": [
-    "def preprocess_text(cat_data, stop_words, punctuation_words):\n",
-    "  new_cat = []\n",
-    "  noise = \"1,2,3,4,5,6,7,8,9,0,०,१,२,३,४,५,६,७,८,९\".split(\",\")\n",
-    "  \n",
-    "  for row in cat_data:\n",
-    "    words = row.strip().split(\" \")      \n",
-    "    nwords = \"\" # []\n",
-    "    \n",
-    "    for word in words:\n",
-    "     if word not in punctuation_words and word not in stop_words:\n",
-    "        is_noise = False\n",
-    "        for n in noise:\n",
-    "          #print(n)\n",
-    "          if n in word:\n",
-    "            is_noise = True\n",
-    "            break\n",
-    "        if is_noise == False:\n",
-    "          word = word.replace(\"(\",\"\")\n",
-    "          word = word.replace(\")\",\"\")\n",
-    "          # nwords.append(word)\n",
-    "          if len(word)>1:\n",
-    "            nwords+=word+\" \"\n",
-    "          \n",
-    "    new_cat.append(nwords.strip())\n",
-    "  # print(new_cat)\n",
-    "  return new_cat\n",
+    "from snowballstemmer import NepaliStemmer\n",
     "\n",
-    "title_clean = preprocess_text([\"\\nसगरमाथा चुचुरोमा पुग्ने ९ शेर्पा टोलीको  नेतृत्व गरेको छ ।\"], stop_words, punctuation_words)\n",
-    "print(title_clean)"
+    "def preprocess_text(cat_data, stop_words, punctuation_words):\n",
+    "    stemmer = NepaliStemmer() # initialize the Nepali stemmer\n",
+    "  \n",
+    "    new_cat = []\n",
+    "    noise = \"1,2,3,4,5,6,7,8,9,0,०,१,२,३,४,५,६,७,८,९\".split(\",\")\n",
+    "  \n",
+    "    for row in cat_data:\n",
+    "        words = row.strip().split(\" \")      \n",
+    "        nwords = \"\"\n",
+    "    \n",
+    "        for word in words:\n",
+    "            if word not in punctuation_words and word not in stop_words:\n",
+    "                is_noise = False\n",
+    "                for n in noise:\n",
+    "                    if n in word:\n",
+    "                        is_noise = True\n",
+    "                        break\n",
+    "                if not is_noise and len(word) > 1:\n",
+    "                    # apply Nepali stemming to the word after removing stop words\n",
+    "                    word = stemmer.stemWord(word)\n",
+    "                    word = word.replace(\"(\",\"\")\n",
+    "                    word = word.replace(\")\",\"\")\n",
+    "                    nwords += word + \" \"\n",
+    "          \n",
+    "        new_cat.append(nwords.strip())\n",
+    "  \n",
+    "    return new_cat\n",
+    "\n",
+    "title_clean = preprocess_text([\"\\nसगरमाथा चुचुरोमा पुग्ने, ९ शेर्पा टोलीको नेतृत्व लेख्नु चाहनुहुन्छ गरेको छ ।\"], stop_words, punctuation_words)\n",
+    "\n",
+    "print(title_clean)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1606dfda-0310-46e4-8c1a-fb4f44ad801d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 95,
    "id": "f322920f-197f-4d31-aa53-b23261c75bf0",
    "metadata": {
     "tags": []
@@ -566,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 38,
    "id": "c381c59d-a708-483d-b570-4b30c2481dea",
    "metadata": {
     "tags": []
@@ -593,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 39,
    "id": "37fc6901-3522-4e50-be4d-c44cb6c8196e",
    "metadata": {
     "tags": []
@@ -662,7 +701,7 @@
        "(1707, 120783)"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 40,
    "id": "b48ecd21-ddb9-4c4a-bc4c-37808776b333",
    "metadata": {
     "tags": []
@@ -701,7 +740,7 @@
        "(1707, 120783)"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 41,
    "id": "96b51bda-703d-4aa7-a98f-dd1535b2b97d",
    "metadata": {
     "tags": []
@@ -788,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 42,
    "id": "d4a6dc18-74ea-4d04-9f95-a65a5ddaa5ec",
    "metadata": {
     "tags": []
@@ -800,7 +839,7 @@
        "0.9994141769185706"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 43,
    "id": "13b440a4-5a80-4d5f-b57f-88aca1a3ba99",
    "metadata": {
     "tags": []
@@ -842,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 44,
    "id": "4480d9b7-458e-405a-bbf0-c334a030144b",
    "metadata": {
     "tags": []
@@ -854,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 45,
    "id": "2e3101e4-5c3c-4495-a02f-8ea54ac90c79",
    "metadata": {
     "tags": []
@@ -874,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 46,
    "id": "d13b5b1b-c165-4b41-9f6e-c698c5564e7f",
    "metadata": {
     "tags": []
@@ -909,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 47,
    "id": "bff5353a-4eee-45bc-9fe7-135a18c31fe8",
    "metadata": {
     "tags": []
@@ -933,7 +972,7 @@
        "       [ 0,  0,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0, 16]], dtype=int64)"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 48,
    "id": "de9d7947-5283-43d4-81a9-b104b0704b4b",
    "metadata": {
     "tags": []
@@ -977,7 +1016,7 @@
        "  'world': 12})"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 49,
    "id": "54c767c7-1c6f-41b5-ba4d-0283effb4482",
    "metadata": {
     "tags": []
@@ -1008,7 +1047,7 @@
        "['politic']"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
