--- a/News_Classification_Model/My_Model.ipynb
+++ b/News_Classification_Model/My_Model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "id": "664dd786-7445-4230-9377-16c1970ea9cd",
    "metadata": {
     "tags": []
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "id": "d6e8bbeb-4bb0-4b61-be9e-075be97dd189",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "id": "31ee8c60-7742-4c92-b87c-51547d86489c",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "id": "7b10f4e9-dd3a-4f8d-8fd3-52773e274fec",
    "metadata": {
     "tags": []
@@ -200,7 +200,7 @@
        "[2134 rows x 2 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "id": "b349647f-6573-4425-9431-5ee3dd1eb43a",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "id": "a5acb3cb-e5a7-44a7-b7e2-15c9a4e1a1b9",
    "metadata": {
     "tags": []
@@ -353,7 +353,7 @@
        "world           122"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "id": "e0b8e2ce-6901-42e2-8ff2-2026c6a2178f",
    "metadata": {
     "tags": []
@@ -386,7 +386,7 @@
        "<Axes: xlabel='category'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "id": "2c021b54-6c35-44fa-9e4c-299d02b170b7",
    "metadata": {
     "tags": []
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "id": "317fa32d-cdb1-41fe-b706-2b2b7181edaf",
    "metadata": {
     "tags": []
@@ -454,7 +454,7 @@
        "[':', '?', '|', '!', '.', ',', '\" \"', \"''\", '( )', '—', '-', \"?'\", '\\\\n']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "id": "d7c377f2-8c02-4d3d-9894-b9ac7054ebd6",
    "metadata": {
     "tags": []
@@ -494,39 +494,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['सगरमाथा चुचुरोमा पुग्ने शेर्पा टोलीको नेतृत्व']\n"
+      "['सगरमाथा चुचुरो पुग् शेर्पा टोली नेतृत्व लेख्']\n"
      ]
     }
    ],
    "source": [
-    "def preprocess_text(cat_data, stop_words, punctuation_words):\n",
-    "  new_cat = []\n",
-    "  noise = \"1,2,3,4,5,6,7,8,9,0,०,१,२,३,४,५,६,७,८,९\".split(\",\")\n",
-    "  \n",
-    "  for row in cat_data:\n",
-    "    words = row.strip().split(\" \")      \n",
-    "    nwords = \"\" # []\n",
-    "    \n",
-    "    for word in words:\n",
-    "     if word not in punctuation_words and word not in stop_words:\n",
-    "        is_noise = False\n",
-    "        for n in noise:\n",
-    "          #print(n)\n",
-    "          if n in word:\n",
-    "            is_noise = True\n",
-    "            break\n",
-    "        if is_noise == False:\n",
-    "          word = word.replace(\"(\",\"\")\n",
-    "          word = word.replace(\")\",\"\")\n",
-    "          # nwords.append(word)\n",
-    "          if len(word)>1:\n",
-    "            nwords+=word+\" \"\n",
-    "          \n",
-    "    new_cat.append(nwords.strip())\n",
-    "  # print(new_cat)\n",
-    "  return new_cat\n",
+    "from snowballstemmer import NepaliStemmer\n",
     "\n",
-    "title_clean = preprocess_text([\"\\nसगरमाथा चुचुरोमा पुग्ने ९ शेर्पा टोलीको  नेतृत्व गरेको छ ।\"], stop_words, punctuation_words)\n",
+    "def preprocess_text(cat_data, stop_words, punctuation_words):\n",
+    "    stemmer = NepaliStemmer() # initialize the Nepali stemmer\n",
+    "  \n",
+    "    new_cat = []\n",
+    "    noise = \"1,2,3,4,5,6,7,8,9,0,०,१,२,३,४,५,६,७,८,९\".split(\",\")\n",
+    "  \n",
+    "    for row in cat_data:\n",
+    "        words = row.strip().split(\" \")      \n",
+    "        nwords = \"\"\n",
+    "    \n",
+    "        for word in words:\n",
+    "            # apply Nepali stemming to the word\n",
+    "            if word not in punctuation_words and word not in stop_words:\n",
+    "                word = stemmer.stemWord(word)\n",
+    "                \n",
+    "                is_noise = False\n",
+    "                for n in noise:\n",
+    "                    if n in word:\n",
+    "                        is_noise = True\n",
+    "                        break\n",
+    "                if not is_noise and len(word) > 1:\n",
+    "                    word = word.replace(\"(\",\"\")\n",
+    "                    word = word.replace(\")\",\"\")\n",
+    "                    nwords += word + \" \"\n",
+    "                \n",
+    "          \n",
+    "        new_cat.append(nwords.strip())\n",
+    "  \n",
+    "    return new_cat\n",
+    "\n",
+    "title_clean = preprocess_text([\"\\nसगरमाथा चुचुरोमा पुग्ने ९ शेर्पा टोलीको नेतृत्व लेख्नु चाहनुहुन्छ गरेको छ ।\"], stop_words, punctuation_words)\n",
     "print(title_clean)"
    ]
   },
@@ -540,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "id": "f322920f-197f-4d31-aa53-b23261c75bf0",
    "metadata": {
     "tags": []
@@ -566,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "id": "c381c59d-a708-483d-b570-4b30c2481dea",
    "metadata": {
     "tags": []
@@ -593,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "id": "37fc6901-3522-4e50-be4d-c44cb6c8196e",
    "metadata": {
     "tags": []
@@ -662,7 +667,7 @@
        "(1707, 120783)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "id": "b48ecd21-ddb9-4c4a-bc4c-37808776b333",
    "metadata": {
     "tags": []
@@ -701,7 +706,7 @@
        "(1707, 120783)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "id": "96b51bda-703d-4aa7-a98f-dd1535b2b97d",
    "metadata": {
     "tags": []
@@ -788,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "id": "d4a6dc18-74ea-4d04-9f95-a65a5ddaa5ec",
    "metadata": {
     "tags": []
@@ -800,7 +805,7 @@
        "0.9994141769185706"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "id": "13b440a4-5a80-4d5f-b57f-88aca1a3ba99",
    "metadata": {
     "tags": []
@@ -842,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "id": "4480d9b7-458e-405a-bbf0-c334a030144b",
    "metadata": {
     "tags": []
@@ -854,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "id": "2e3101e4-5c3c-4495-a02f-8ea54ac90c79",
    "metadata": {
     "tags": []
@@ -874,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "id": "d13b5b1b-c165-4b41-9f6e-c698c5564e7f",
    "metadata": {
     "tags": []
@@ -909,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "id": "bff5353a-4eee-45bc-9fe7-135a18c31fe8",
    "metadata": {
     "tags": []
@@ -933,7 +938,7 @@
        "       [ 0,  0,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0, 16]], dtype=int64)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "id": "de9d7947-5283-43d4-81a9-b104b0704b4b",
    "metadata": {
     "tags": []
@@ -977,7 +982,7 @@
        "  'world': 12})"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "id": "54c767c7-1c6f-41b5-ba4d-0283effb4482",
    "metadata": {
     "tags": []
@@ -1008,7 +1013,7 @@
        "['politic']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "id": "8d5737b2-07ef-4d49-aba4-2e238a2dfa29",
    "metadata": {
     "tags": []
@@ -1049,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "id": "d90612a0-30e5-41b4-b292-d7022dc3185b",
    "metadata": {
     "tags": []
@@ -1062,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "id": "f2a5f8fd-4bc3-4941-a58e-d0634c961ed3",
    "metadata": {
     "tags": []
@@ -1080,79 +1085,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ac872e18-c1ee-4236-9cda-0e63884b2d4a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting matplotlib\n",
-      "  Downloading matplotlib-3.7.1-cp311-cp311-win_amd64.whl (7.6 MB)\n",
-      "                                              0.0/7.6 MB ? eta -:--:--\n",
-      "                                              0.0/7.6 MB 1.3 MB/s eta 0:00:06\n",
-      "                                              0.1/7.6 MB 1.6 MB/s eta 0:00:05\n",
-      "     -                                        0.2/7.6 MB 1.8 MB/s eta 0:00:05\n",
-      "     -                                        0.4/7.6 MB 2.1 MB/s eta 0:00:04\n",
-      "     ---                                      0.6/7.6 MB 2.7 MB/s eta 0:00:03\n",
-      "     ----                                     0.9/7.6 MB 3.3 MB/s eta 0:00:03\n",
-      "     -------                                  1.4/7.6 MB 4.5 MB/s eta 0:00:02\n",
-      "     ----------                               2.0/7.6 MB 5.5 MB/s eta 0:00:02\n",
-      "     -------------                            2.5/7.6 MB 6.2 MB/s eta 0:00:01\n",
-      "     --------------                           2.8/7.6 MB 6.4 MB/s eta 0:00:01\n",
-      "     --------------                           2.8/7.6 MB 6.4 MB/s eta 0:00:01\n",
-      "     --------------                           2.8/7.6 MB 6.4 MB/s eta 0:00:01\n",
-      "     -----------------                        3.4/7.6 MB 5.7 MB/s eta 0:00:01\n",
-      "     ----------------------                   4.4/7.6 MB 6.8 MB/s eta 0:00:01\n",
-      "     ------------------------------           5.8/7.6 MB 8.5 MB/s eta 0:00:01\n",
-      "     ---------------------------------        6.4/7.6 MB 8.7 MB/s eta 0:00:01\n",
-      "     ------------------------------------     7.0/7.6 MB 8.9 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  7.5/7.6 MB 9.1 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  7.6/7.6 MB 9.0 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  7.6/7.6 MB 9.0 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 7.6/7.6 MB 8.1 MB/s eta 0:00:00\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Downloading contourpy-1.0.7-cp311-cp311-win_amd64.whl (162 kB)\n",
-      "                                              0.0/163.0 kB ? eta -:--:--\n",
-      "     ------------------------------------- 163.0/163.0 kB 10.2 MB/s eta 0:00:00\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Downloading cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Downloading fonttools-4.39.3-py3-none-any.whl (1.0 MB)\n",
-      "                                              0.0/1.0 MB ? eta -:--:--\n",
-      "     -----------------                        0.5/1.0 MB 14.2 MB/s eta 0:00:01\n",
-      "     ----------------------------------       0.9/1.0 MB 13.7 MB/s eta 0:00:01\n",
-      "     -----------------------------------      0.9/1.0 MB 7.1 MB/s eta 0:00:01\n",
-      "     -------------------------------------    0.9/1.0 MB 5.4 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  1.0/1.0 MB 4.5 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.0/1.0 MB 4.3 MB/s eta 0:00:00\n",
-      "Collecting kiwisolver>=1.0.1 (from matplotlib)\n",
-      "  Downloading kiwisolver-1.4.4-cp311-cp311-win_amd64.whl (55 kB)\n",
-      "                                              0.0/55.4 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 55.4/55.4 kB 3.0 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: numpy>=1.20 in c:\\users\\dell\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (1.23.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\dell\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (23.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\dell\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (9.5.0)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
-      "  Downloading pyparsing-3.0.9-py3-none-any.whl (98 kB)\n",
-      "                                              0.0/98.3 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 98.3/98.3 kB ? eta 0:00:00\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\dell\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\dell\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Installing collected packages: pyparsing, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
-      "Successfully installed contourpy-1.0.7 cycler-0.11.0 fonttools-4.39.3 kiwisolver-1.4.4 matplotlib-3.7.1 pyparsing-3.0.9\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install matplotlib\n"
-   ]
   },
   {
    "cell_type": "code",
